# Medical-assistant-model

./: .gitignore  README.md  model_test_results.txt  pyproject.toml
src/: data.py  data_processing.py  main.py  model.py  test_models.py  training.py
